# Cloud-Security-Posture-Scanner

./: .env.example  .gitignore  DEMO_SETUP.md  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: BUILD_STATUS.md  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  test-api.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/__tests__/: Layout.test.tsx  test-utils.tsx
frontend/src/pages/: Activity.tsx  Dashboard.tsx  DashboardSimple.tsx  Reports.tsx  Scan.tsx  Settings.tsx  TestPage.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/types/: index.ts
src/: demo_api.py
src/cspm_scanner/: __init__.py  api.py  auth.py  cli.py  config.py  models.py  risk_scoring.py  scanner_engine.py
src/cspm_scanner/reports/: __init__.py  html_reporter.py  json_reporter.py  report_generator.py
src/cspm_scanner/scanners/: __init__.py  base_scanner.py  compute_scanner.py  databricks_scanner.py  keyvault_scanner.py  network_scanner.py  storage_scanner.py
